manifest/objects/GBLite__GB_Load_Cache__c.object
<CustomObject>
    <description>GridBuddy - Holds the Ids of the parent object for a given context.</description>
    <fields>
        <fullName>GBLite__Grid__c</fullName>
        <description>Name of the grid this cache holds data for.</description>
        <label>Grid</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Ids_Set1__c</fullName>
        <description>First set of 1000 fields.</description>
        <label>Ids Set1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Ids_Set2__c</fullName>
        <description>Next set of 1000 fields.</description>
        <label>Ids Set2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Ids_Set3__c</fullName>
        <description>Next set of 1000 fields.</description>
        <label>Ids Set3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>GB Load Cache</label>
    <listViews>
        <fullName>GBLite__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LC-{0000}</displayFormat>
        <label>GB Load Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Load Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>